5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1800_2569.log
== SUBMITION (2019-06-13 09:28:54) 
-- CODE:
from numpy import*
from math import*
vet = array(eval(input("vetor: ")))
vec = sum(vet)/size(vet)

i = o
for y in vet:
	i = i + (y - b)**2
i = sqrt(i/(size(vet) -1))
print(round(i,3))
-- EXECUTION TIME:
1.26972
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2569/main.py", line 6, in <module>
    i = o
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:29:19) 
-- CODE:
from numpy import*
from math import*
vet = array(eval(input("vetor: ")))
vec = sum(vet)/size(vet)

i = o
for y in vet:
	i = i + (y - vec)**2
i = sqrt(i/(size(vet) -1))
print(round(i,3))
-- EXECUTION TIME:
1.18738
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2569/main.py", line 6, in <module>
    i = o
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:29:52) 
-- CODE:
from numpy import*
from math import*
vet = array(eval(input("vetor: ")))
vec = sum(vet)/size(vet)
i = 0
for y in vet:
	i = i + (y - vec)**2
i = sqrt(i/(size(vet) -1))
print(round(i,3))
-- EXECUTION TIME:
1.02087
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
